source/datahub/main/default/objects/Notification__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>