source/datahub/main/default/objects/Notification__e/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Target component subscribing to the event</description>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>