source/datahub/main/default/objects/Notification__e/fields/TargetUserId__c.field-meta.xml
<CustomField>
    <fullName>TargetUserId__c</fullName>
    <label>Target User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>